Implemented a lot of functionality on the bit_pattern class and added basic test cases. Refactored namespace of lib from pine_pp to pinepp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,3 +38,7 @@ ADD_TEST(NAME utility COMMAND utility_test)
 add_executable(concepts_test ${CMAKE_SOURCE_DIR}/test/concepts.test.cpp)
 target_link_libraries(concepts_test gtest_main pinepp)
 ADD_TEST(NAME concepts COMMAND concepts_test)
+
+add_executable(bit_pattern_test ${CMAKE_SOURCE_DIR}/test/bit_pattern.test.cpp)
+target_link_libraries(bit_pattern_test gtest_main pinepp)
+ADD_TEST(NAME bit_pattern COMMAND bit_pattern_test)
